# avell-unofficial-control-center-rs

./: .gitignore  Avell Custom Control (Port Linux).md  README.md  SETUP.md  teclado
.claude/: settings.local.json
.planning/: HANDOFF.json  ROADMAP.md  STATE.md
.planning/notes/: audio-reactive-leds-exploration.md
.planning/phases/01-audio-reactive-led-effects/: .continue-here.md  01-01-SUMMARY.md  01-02-SUMMARY.md  01-03-SUMMARY.md  01-CONTEXT.md  01-PLAN-01.md  01-PLAN-02.md  01-PLAN-03.md  01-RESEARCH.md  01-UAT.md
aucc-rs/: Cargo.toml
aucc-rs/src/: config.rs  lib.rs  main.rs  setup.rs
aucc-rs/src/audio/: capture.rs  effects.rs  fft.rs  mod.rs
aucc-rs/src/keyboard/: colors.rs  effects.rs  mod.rs
aucc-rs/src/lightbar/: mod.rs
aucc-rs/src/power/: mod.rs
aucc-rs/src/telemetry/: mod.rs
aucc-rs/src/ui/: tui.rs
install/: 70-avell-hid.rules  install.sh  org.avell.aucc.policy
