[package]
name = "aucc-rs"
version = "2.0.0"
edition = "2021"
description = "Linux driver and TUI for ITE 8291 RGB keyboard and ITE 8233 lightbar (Avell/Tongfang laptops)"
license = "MIT"
authors = ["Rodrigo Gomes da Cunha <rodgomesc@gmail.com>"]

[lib]
name = "aucc_rs"
path = "src/lib.rs"

[[bin]]
name = "aucc"
path = "src/main.rs"

[[bin]]
name = "aucc-ui"
path = "src/bin/aucc-ui.rs"

[dependencies]
rusb    = "0.9"
ratatui = "0.29"
crossterm = "0.28"
clap    = { version = "4", features = ["derive"] }
colored = "2"
libc    = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29", features = ["ioctl", "fs"] }

[profile.release]
opt-level = 3
strip = true
lto = true
